# AuDaLaC

./: .gitignore  Cargo.toml  README.md  clippy_out  init_file.cpp  init_file.h  init_file_parser.cu  sketch_all_gpu_code.txt  voting_strategies.txt
.github/workflows/: rust.yml
compile_resources/: ADL.h  Makefile  Schedule.cu  Schedule.h  Struct.cu  Struct.h  fp_manager.h  init_file.cu  init_file.h
runtime_components/: GraphSchedule.cu  GraphSchedule.h  OnHostStep.cu  OnHostStep.h  Schedule.cu  Struct.cu  Struct.h
src/: adl.lalrpop  ast.rs  ast_validator.rs  cuda_atomics.rs  init_file_generator.rs  lopl.lalrpop  main.rs  transpilation_traits.rs  transpile.rs  utils.rs
src/analysis/: ast_visitor.rs  mod.rs  program_analysis.rs  schedule_analysis.rs  step_analysis.rs
src/backend/: compilation_traits.rs  compile.rs  graph_launch_schedule.rs  mod.rs  on_host_schedule.rs  single_kernel_schedule.rs  step_body_compiler.rs
src/basic_compiler/: basic_ast_translator.rs  basic_schedule_manager.rs  basic_struct_manager.rs  basic_transpiler.rs  mod.rs
src/basic_schedule_manager/: basic_schedule_manager.rs  mod.rs
src/basic_struct_manager/: basic_struct_manager.rs  mod.rs
src/basic_transpiler/: basic_transpiler.rs  mod.rs
src/coalesced_compiler/: coalesced_ast_translator.rs  coalesced_schedule_manager.rs  coalesced_struct_manager.rs  (+2 more)
tests/: benchmark_prefix_sum.rs  benchmark_reachability.rs  benchmark_scc.rs  benchmark_sorting.rs  benchmark_spm.rs  benchmark_synthesis.rs  common.rs  sketches.adl  sketches2.adl  test_ast_fixtures.rs  test_generate_init_file.rs
(+445 files in other folders)
