[package]
name = "loplparser"
version = "0.1.0"
edition = "2021"
authors = ["G. P. Leemrijse <g.p.leemrijse@student.tue.nl>"]

[build-dependencies]
lalrpop = "^0.19"

[dependencies]
lalrpop-util = {version = "^0.19", features = ["lexer"]}
regex = "1"
clap = { version = "^3.2.22", features = ["derive"] }
assert_cmd = "^2.0.4"
codespan = "^0.11.1"
codespan-reporting = "^0.11.1"
