[package]
name = "adl"
version = "0.1.0"
edition = "2021"
authors = ["G. P. Leemrijse <g.p.leemrijse@student.tue.nl>"]

[build-dependencies]
lalrpop = "~0"

[dependencies]
lalrpop-util = {version = "~0", features = ["lexer"]}
regex = "~1"
clap = { version = "~3", features = ["derive"] }
assert_cmd = "~2"
codespan = "~0"
codespan-reporting = "~0"
indoc = "~1"
wait-timeout = "~0"